--- a/library.bib
+++ b/library.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Ryan Cox at 2023-02-26 09:37:15 +1100 
+%% Created for Ryan Cox at 2023-02-27 19:37:48 +1100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -39,9 +39,9 @@
 
 @incollection{Mill:2003ab,
 	author = {John Stuart Mill},
-	booktitle = {Utilitarianism and On Liberty Including Mill's `Essay on Bentham' and selections from the writings of Utilitarianism and On Liberty, Including Mill's 'Essay on Bentham' and selections from the writings of Jeremy Bentham and John Austin},
+	booktitle = {Utilitarianism and On Liberty; Including Mill's `Essay on Bentham' and selections from the writings of Jeremy Bentham and John Austin},
 	date-added = {2023-02-20 19:34:26 +1100},
-	date-modified = {2023-02-20 19:34:40 +1100},
+	date-modified = {2023-02-27 19:37:41 +1100},
 	edition = {2nd},
 	editor = {Mary Warnock},
 	publisher = {Blackwell Publishing},
@@ -50,9 +50,9 @@
 
 @incollection{Mill:2003aa,
 	author = {John Stuart Mill},
-	booktitle = {Utilitarianism and On Liberty Including Mill's `Essay on Bentham' and selections from the writings of Utilitarianism and On Liberty, Including Mill's 'Essay on Bentham' and selections from the writings of Jeremy Bentham and John Austin},
+	booktitle = {Utilitarianism and On Liberty; Including Mill's `Essay on Bentham' and selections from the writings of Jeremy Bentham and John Austin},
 	date-added = {2023-02-20 19:33:30 +1100},
-	date-modified = {2023-02-20 19:33:51 +1100},
+	date-modified = {2023-02-27 19:37:48 +1100},
 	edition = {2nd},
 	editor = {Mary Warnock},
 	publisher = {Blackwell Publishing},
@@ -61,9 +61,9 @@
 
 @incollection{Bentham:2003aa,
 	author = {Jeremy Bentham},
-	booktitle = {Utilitarianism and On Liberty Including Mill's `Essay on Bentham' and selections from the writings of Utilitarianism and On Liberty, Including Mill's 'Essay on Bentham' and selections from the writings of Jeremy Bentham and John Austin},
+	booktitle = {Utilitarianism and On Liberty; Including Mill's `Essay on Bentham' and selections from the writings of Jeremy Bentham and John Austin},
 	date-added = {2023-02-20 16:24:28 +1100},
-	date-modified = {2023-02-20 16:26:36 +1100},
+	date-modified = {2023-02-27 19:37:33 +1100},
 	edition = {2nd},
 	editor = {Mary Warnock},
 	publisher = {Blackwell Publishing},
