nagel paper references added

--- a/library.bib
+++ b/library.bib
@@ -1,9 +1,6 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Ryan Cox at 2023-02-27 19:37:48 +1100 
-
-
 %% Saved with string encoding Unicode (UTF-8) 
 
 
@@ -19,6 +16,25 @@
 	publisher = {Metaphysics Research Lab, Stanford University},
 	title = {{Mill's Moral and Political Philosophy}},
 	year = {2022}}
+
+@book{Garcia-Carpintero:2016aa,
+	author = {Manuel Garc\'{i}a{-}Carpintero and Stephan Torre},
+	date-added = {2023-03-03 10:34:58 +1100},
+	date-modified = {2023-03-03 10:35:02 +1100},
+	publisher = {Oxford: Oxford University Press},
+	title = {About Oneself: De Se Thought and Communication},
+	year = {2016}}
+
+@incollection{Lewis:1994aa,
+	author = {David K. Lewis},
+	booktitle = {Companion to the Philosophy of Mind},
+	date-added = {2023-03-03 10:32:26 +1100},
+	date-modified = {2023-03-03 10:32:29 +1100},
+	editor = {Samuel Guttenplan},
+	pages = {412--431},
+	publisher = {Blackwell},
+	title = {Reduction of Mind},
+	year = {1994}}
 
 @book{Peacocke:2008aa,
 	author = {Christopher Peacocke},
